--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ https://www.tooplate.com/view/2116-blugoon
             helps me to leverage my skills.
         
             For clarifications and questions you may contact me with the given details below. Furthermore, I could allot a time
-            for us to talk and to bat around my achievements.
+            for us to talk and bat around my achievements.
           </span>
           <br>
           <br>
