--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Blugoon HTML Bootstrap 4 Template</title>
+  <title>Antonio Caballes</title>
   <meta name="description" content="" />
   <meta name="author" content="Tooplate" />
-  <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Additional CSS Files -->
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/fontawesome.css" />
   <link rel="stylesheet" href="assets/css/tooplate-style.css" />
   <link rel="stylesheet" href="assets/css/owl.css" />
   <link rel="stylesheet" href="assets/css/lightbox.css" />
 </head>
-<!--
-Tooplate 2116 Blugoon
-https://www.tooplate.com/view/2116-blugoon
--->
 
 <body>
   <div id="page-wraper">
-    <!-- Sidebar Menu -->
     <div class="responsive-nav">
       <i class="fa fa-bars" id="menu-toggle"></i>
       <div id="menu" class="menu">
