Insert href about

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
-              <li><a href="#">Personal Information</a></li>
+              <li><a href="#about">Personal Information</a></li>
               <li><a href="#competencies">Competencies</a></li>
               <li><a href="#work">Work and Experience</a></li>
               <li><a href="#personal_development">Personal Development</a></li>
