--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="isotope-box">
               <div class="isotope-item" data-type="">
                 <figure class="snip1321">
-                  <img src="assets/images/sql.jpg" alt="woman at the beach" />
+                  <img src="assets/images/sql.jpg" alt="sql" />
                   <figcaption>
                     <a href="assets/images/sql.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
@@ -261,7 +261,7 @@
               </div>
               <div class="isotope-item" data-type="">
                 <figure class="snip1321">
-                  <img src="assets/images/microarchi.jpg" alt="woman at the beach" />
+                  <img src="assets/images/microarchi.jpg" alt="" />
                   <figcaption>
                     <a href="assets/images/microarchi.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
@@ -271,7 +271,7 @@
               </div>
               <div class="isotope-item" data-type="">
                 <figure class="snip1321">
-                  <img src="assets/images/0001.jpg" alt="woman at the beach" />
+                  <img src="assets/images/0001.jpg" alt="" />
                   <figcaption>
                     <a href="assets/images/0001.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
@@ -284,7 +284,7 @@
             <div class="isotope-box">
               <div class="isotope-item" data-type="">
                 <figure class="snip1321">
-                  <img src="assets/images/linux.jpg" alt="woman at the beach" />
+                  <img src="assets/images/linux.jpg" alt="" />
                   <figcaption>
                     <a href="assets/images/linux.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
@@ -294,7 +294,7 @@
               </div>
               <div class="isotope-item" data-type="">
                 <figure class="snip1321">
-                  <img src="assets/images/css1.jpg" alt="woman at the beach" />
+                  <img src="assets/images/css1.jpg" alt="" />
                   <figcaption>
                     <a href="assets/images/css1.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
@@ -304,7 +304,7 @@
               </div>
               <div class="isotope-item" data-type="">
                 <figure class="snip1321">
-                  <img src="assets/images/css2.jpg" alt="woman at the beach" />
+                  <img src="assets/images/css2.jpg" alt="" />
                   <figcaption>
                     <a href="assets/images/css2.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
