--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h2>About Me</h2>
           <div class="line-dec"></div>
           <span>
-            I have been in the IT industry for more than 5 years. I continue to adapt my attitude to be curious in
+            Hi! My name is Anton Caballes. I have been in the IT industry for more than 5 years. I continue to adapt my attitude to be curious in
             technology trends. Furthermore, being consistent in learning various approach in software design and
             programming are the things that I am fond of.
           </span>
@@ -70,8 +70,9 @@
         <div class="section-heading">
           <h4>Competencies</h4>
           <div class="line-dec"></div>
-          <span>Praesent posuere fringilla elit, non maximus tellus posuere nec. Nunc eu sapien nec est elementum
-            sodales.</span>
+          <span>
+            In terms of my experties, I have shown a great perception of these skills and I continue to merge with different dimensions in IT.
+          </span>
         </div>
         <div class="row">
           <div class="col-md-6">
