--- a/index.html
+++ b/index.html
@@ -243,20 +243,20 @@
         </div>
         <div class="row">
           <div class="isotope-wrapper">
-            <form class="isotope-toolbar">
+            <!-- <form class="isotope-toolbar">
               <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                 <span>all</span></label>
-            </form>
+            </form> -->
 
             <div class="isotope-box">
-              <div class="isotope-item" data-type="">
+              <div class="isotope-item" data-type="linux">
                 <figure class="snip1321">
-                  <img src="assets/images/sql.jpg" alt="sql" />
+                  <img src="assets/images/NDG_Linux_unhatched.jpg" alt="linux_unhatched" />
                   <figcaption>
-                    <a href="assets/images/sql.jpg" data-lightbox="image-1" data-title="Caption"><i
+                    <a href="assets/images/NDG_Linux_unhatched.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
-                    <h4>SQL Bootcamp</h4>
-                    <span>SQL Bootcamp</span>
+                    <h4>NDG Linux Essentials</h4>
+                    <span>NDG Linux Essentials</span>
                   </figcaption>
                 </figure>
               </div>
@@ -310,6 +310,17 @@
                     <a href="assets/images/css2.jpg" data-lightbox="image-1" data-title="Caption"><i
                         class="fa fa-search-plus"></i></a>
                     <h4>Installing and Configuring Computer Systems</h4>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="isotope-item" data-type="udemy">
+                <figure class="snip1321">
+                  <img src="assets/images/sql.jpg" alt="sql" />
+                  <figcaption>
+                    <a href="assets/images/sql.jpg" data-lightbox="image-1" data-title="Caption"><i
+                        class="fa fa-search-plus"></i></a>
+                    <h4>SQL Bootcamp</h4>
+                    <span>SQL Bootcamp</span>
                   </figcaption>
                 </figure>
               </div>
