align to left certificate

--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
                   </figcaption>
                 </figure>
               </div>
+            </div>
+            <div class="isotope-box">
               <div class="isotope-item" data-type="udemy">
                 <figure class="snip1321">
                   <img src="assets/images/sql.jpg" alt="sql" />
