fix isotope box

--- a/index.html
+++ b/index.html
@@ -243,10 +243,6 @@
         </div>
         <div class="row">
           <div class="isotope-wrapper">
-            <!-- <form class="isotope-toolbar">
-              <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
-                <span>all</span></label>
-            </form> -->
 
             <div class="isotope-box">
               <div class="isotope-item" data-type="linux">
@@ -260,7 +256,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="isotope-item" data-type="">
+              <div class="isotope-item" data-type="cert">
                 <figure class="snip1321">
                   <img src="assets/images/microarchi.jpg" alt="" />
                   <figcaption>
@@ -270,7 +266,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="isotope-item" data-type="">
+              <div class="isotope-item" data-type="cert">
                 <figure class="snip1321">
                   <img src="assets/images/0001.jpg" alt="" />
                   <figcaption>
@@ -282,8 +278,12 @@
               </div>
             </div>
 
+
+          </div>
+
+          <div class="isotope-wrapper">
             <div class="isotope-box">
-              <div class="isotope-item" data-type="">
+              <div class="isotope-item" data-type="cert">
                 <figure class="snip1321">
                   <img src="assets/images/linux.jpg" alt="" />
                   <figcaption>
@@ -293,7 +293,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="isotope-item" data-type="">
+              <div class="isotope-item" data-type="cert">
                 <figure class="snip1321">
                   <img src="assets/images/css1.jpg" alt="" />
                   <figcaption>
@@ -314,6 +314,9 @@
                 </figure>
               </div>
             </div>
+          </div>
+
+          <div class="isotope-wrapper">
             <div class="isotope-box">
               <div class="isotope-item" data-type="udemy">
                 <figure class="snip1321">
@@ -327,8 +330,9 @@
                 </figure>
               </div>
             </div>
-
           </div>
+
+
         </div>
     </section>
 
