--- a/index.html
+++ b/index.html
@@ -330,6 +330,15 @@
                 </figure>
               </div>
             </div>
+            <div class="isotope-box">
+              <div class="isotope-item" data-type="udemy">
+              </div>
+            </div>
+            <div class="isotope-box">
+              <div class="isotope-item" data-type="udemy">
+              </div>
+            </div>
+
           </div>
 
 
@@ -356,21 +365,11 @@
           </span>
         </div>
         <div class="row">
-          <div class="right-content">
-            <div class="container">
-              <div class="right-image-post">
-                <div class="row">
-                  <div class="col">
-                    <div class="right-text">
-                      <ul>
-                        <li> Email: antoniocaballes@gmail.com </li>
-                        <li> <a href="https://www.linkedin.com/in/antonio-caballes-a44a4a18b/">LinkedIn</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="right-text">
+            <ul>
+              <li> Email: antoniocaballes@gmail.com </li>
+              <li> <a href="https://www.linkedin.com/in/antonio-caballes-a44a4a18b/">LinkedIn</a></li>
+            </ul>
           </div>
         </div>
       </div>
