--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
       showSection($(this).attr("href"), true);
     });
 
-    $(window).scroll(function () {
-      checkSection();
-    });
+    // $(window).scroll(function () {
+    //   checkSection();
+    // });
   </script>
 </body>
 
