Change contact into

--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
             Hi! Thank you for visiting my profile. If you're looking for resources in terms of IT or programming, I
             would
             like to
-            volunteer myself to help you. As an IT professional, I am happy to assist other developers to improve other
-            skills and mine as well.
+            volunteer myself to help you. As an IT professional, I am happy to assist other developers to share insights and various techniques in coding.
 
             For clarifications and questions you may contact me with the given details below. Furthermore, I could allot
             a time
