Update web dev & sda description

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
           <h2>About Me</h2>
           <div class="line-dec"></div>
           <span>
-            I have been in the IT industry for more than 5 years. I continue to adapt my attitude to be curious in
-            technology trends. Furthermore, being consistent in learning various approach in software design and
-            programming are the things that I am fond of.
+          I work as a systems analyst and a web developer. As an IT professional, learning has been persistent. It expands my knowledge in terms of development and designs in system architecture.
+          Furthermore, at this time and age, I have been interested in learning digital security (cybersecurity) since cybercriminals have increased in numbers in the recent years.
           </span>
         </div>
       </div>
@@ -78,7 +77,7 @@
             <div class="service-item">
               <i class="fa fa-desktop"></i>
               <h4>Web Development</h4>
-              <p>Elixir / Phoenix Framework, Absinthe, CodeIgniter and Laravel Framework.</p>
+              <p>Elixir, Absinthe, Python (Pytest & Django framework) and (PHP) Laravel Framework.</p>
             </div>
           </div>
           <div class="col-md-6">
@@ -106,7 +105,7 @@
             <div class="service-item">
               <i class="fa fa-bar-chart" aria-hidden="true"></i>
               <h4>System Design & Analysis</h4>
-              <p>Proficient in gathering technical system requirements and structure. In addition, I am capable in identifying the necessary endpoints and design a high-level architecture of a system.</p>
+              <p>Proficient in gathering technical system requirements and structure. </p>
             </div>
           </div>
         </div>
