--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
             <ul>
               <li> Email: antonraphaelcaballes@gmail.com </li>
               <li> <a href="https://www.linkedin.com/in/antonio-caballes-a44a4a18b/">LinkedIn</a></li>
+              <li> <a href="https://drive.google.com/file/d/1FmZbMF9dytFgeQj5fx_pSXpw4N2j65Qs/view" target="_blank">My CV</a></li>
             </ul>
           </div>
         </div>
