Update latest personal information and work experiences

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h2>About Me</h2>
           <div class="line-dec"></div>
           <span>
-          I work as a systems analyst and a web developer. As an IT professional, learning has been persistent. It expands my knowledge in terms of development and designs in system architecture.
+            I worked as a systems analyst and a web developer. As an IT professional, learning has been persistent. It expands my knowledge in terms of development and designs in system architecture. <b>I am currently a student, I am taking Master of Information Technology at King's Own Institute, Australia. For this reason, as a student, I expect to become more advanced and capable to handle complex problem in terms of security and programming. </b>
           Furthermore, at this time and age, I have been interested in learning digital security (cybersecurity) since cybercriminals have increased in numbers in the recent years.
           </span>
         </div>
@@ -124,11 +124,31 @@
             <div class="col-md-8">
               <div class="right-text">
                 <h5>
+                  <u>Systems Analyst</u>
+                </h5>
+                <h6>
+                  Yondu
+                  (June 24, 2022 - February 22, 2022)
+                </h6>
+                <ul>
+                  <li>
+                    Provide system support and needed requirements to vendors
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right-image-post">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="right-text">
+                <h5>
                   <u>Software Engineer</u>
                 </h5>
                 <h6>
                   Pragtechnologies
-                  (August 1, 2019 - March 8, 2021)
+                  (August 1, 2019 - June 10, 2021)
                 </h6>
                 <ul>
                   <li>SeeYouDoc - health care services for convenient booking appointment and online appointments.
@@ -321,7 +341,7 @@
             <ul>
               <li> Email: antonraphaelcaballes@gmail.com </li>
               <li> <a href="https://www.linkedin.com/in/antonio-caballes-a44a4a18b/">LinkedIn</a></li>
-              <li> <a href="https://drive.google.com/file/d/1FmZbMF9dytFgeQj5fx_pSXpw4N2j65Qs/view" target="_blank">My CV</a></li>
+              <li> <a href="https://drive.google.com/file/d/1YR-jp9P4vQKZadN9dXe67y_vlB6PVanz/view?usp=sharing" target="_blank">My CV</a></li>
             </ul>
           </div>
         </div>
