Update latest personal information

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h2>About Me</h2>
           <div class="line-dec"></div>
           <span>
-            I worked as a systems analyst and a web developer. As an IT professional, learning has been persistent. It expands my knowledge in terms of development and designs in system architecture. <b>I am currently a student, I am taking Master of Information Technology at King's Own Institute, Australia. For this reason, as a student, I expect to become more advanced and capable to handle complex problem in terms of security and programming. </b>
+            I worked as a systems analyst and a web developer. As an IT professional, learning has been persistent. It expands my knowledge in terms of development and designs in system architecture. <b> Therefore, I pursue taking Master of Information Technology at King's Own Institute, Australia. For this reason, as a student, I expect to become more advanced and capable to handle complex problem in terms of security and programming. </b>
           Furthermore, at this time and age, I have been interested in learning digital security (cybersecurity) since cybercriminals have increased in numbers in the recent years.
           </span>
         </div>
